--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -6,51 +6,52 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
-
+    <include layout="@layout/activity_toolbar" />
 
 
     <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center|center_vertical"
-            android:src="@drawable/logo_header" />
-    <ScrollView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center|center_vertical"
+        android:src="@drawable/logo_header" />
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo_header" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center|center_vertical"-->
-                <!--android:layout_marginTop="6dp"-->
-                <!--android:text="About Us"-->
-                <!--android:textColor="@android:color/black"-->
-                <!--android:textSize="18sp"-->
-                 <!--/>-->
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical">
 
 
-            <TextView
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:padding="12dp"
                     android:text="@string/contact_us"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
 
-        </LinearLayout>
+            </LinearLayout>
 
 
-    </ScrollView>
-
+        </ScrollView>
+    </FrameLayout>
 </LinearLayout>
 
 
