--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -4,139 +4,154 @@
     android:id="@+id/activity_contact_us"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="angiratech.com.kisaanapp.Activity.ContactUsActivity">
+    tools:context="angiratech.com.kisaanapp.Activity.ContactUs">
 
-    <LinearLayout
+
+    <include layout="@layout/activity_toolbar" />
+
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/ImgPhoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/margin_40"
-            android:adjustViewBounds="true"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
             android:src="@drawable/logo_header" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="@dimen/margin_2"
-                android:gravity="center"
-                android:singleLine="true"
-                android:text="KisanBharati"
-
-                android:textSize="@dimen/textsize_21"
-                android:textStyle="bold" />
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_2"
-                    android:gravity="center"
-                    android:text="2181, 1st Floor, Raja Park"
-                    android:textSize="@dimen/textsize_18" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/margin_2"
                     android:gravity="center"
-                    android:text="Main Rani Bagh Road"
-                    android:textSize="@dimen/textsize_18" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_2"
-                    android:gravity="center"
-                    android:text=" New Delhi-110034"
-                    android:textSize="@dimen/textsize_18" />
+                    android:singleLine="true"
+                    android:text="KisanBharati"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/textsize_21"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_6"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
                         android:layout_marginTop="@dimen/margin_2"
                         android:gravity="center"
-                        android:singleLine="true"
-                        android:text="Mob:"
-                        android:textSize="@dimen/textsize_18"
-                        android:textStyle="bold" />
+                        android:text="2181, 1st Floor, Raja Park"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/textsize_18" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="@dimen/margin_4"
                         android:layout_marginTop="@dimen/margin_2"
-                        android:padding="@dimen/margin_2"
-                        android:singleLine="true"
-                        android:text="9350141815"
+                        android:gravity="center"
+                        android:text="Main Rani Bagh Road"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/textsize_18" />
 
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginTop="@dimen/margin_1"
-                        android:singleLine="true"
-                        android:text="E-Mail:"
-                        android:textSize="@dimen/textsize_18"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="@dimen/margin_4"
-                        android:layout_marginTop="@dimen/margin_1"
-                        android:padding="@dimen/margin_2"
-                        android:singleLine="true"
-                        android:text="kisanbharati@gmail.com"
+                        android:layout_marginTop="@dimen/margin_2"
+                        android:gravity="center"
+                        android:text=" New Delhi-110034"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/textsize_18" />
-                </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_6"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:textColor="@color/black">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="@dimen/margin_2"
+                            android:gravity="center"
+                            android:singleLine="true"
+                            android:text="Mob:"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/textsize_18"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/margin_4"
+                            android:layout_marginTop="@dimen/margin_2"
+                            android:padding="@dimen/margin_2"
+                            android:singleLine="true"
+                            android:text="9350141815"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/textsize_18" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="@dimen/margin_1"
+                            android:singleLine="true"
+                            android:text="E-Mail:"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/textsize_18"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/margin_4"
+                            android:layout_marginTop="@dimen/margin_1"
+                            android:padding="@dimen/margin_2"
+                            android:singleLine="true"
+                            android:text="kisanbharati@gmail.com"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/textsize_18" />
+                    </LinearLayout>
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
+    </FrameLayout>
 </LinearLayout>
