--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -7,16 +7,24 @@
     <include layout="@layout/activity_toolbar" />
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo_header" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_category"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            />
-
+            android:layout_marginTop="10dp"
+            android:scrollbars="vertical" />
+    </FrameLayout>
 
 
 </LinearLayout>
