--- a/app/src/main/res/layout/activity_dealers.xml
+++ b/app/src/main/res/layout/activity_dealers.xml
@@ -8,24 +8,38 @@
 
     <include layout="@layout/activity_toolbar" />
 
-
-    <android.support.design.widget.CoordinatorLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/conent_spinner" />
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo_header" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/round_Fab"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right|bottom"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="16dp"
-            android:elevation="5dp"
-            android:scaleType="center"
-            android:src="@drawable/drawable_fab_plus_icon"
-            android:tint="#ffffff" />
-    </android.support.design.widget.CoordinatorLayout>
+        <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include layout="@layout/conent_spinner" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/round_Fab"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right|bottom"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="16dp"
+                android:elevation="5dp"
+                android:scaleType="center"
+                android:src="@drawable/drawable_fab_plus_icon"
+                android:tint="#ffffff" />
+        </android.support.design.widget.CoordinatorLayout>
+
+
+    </FrameLayout>
+
 
 </LinearLayout>
