--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:itemIconTint="@color/tab_logo_color"
-        app:itemTextColor="@color/tab_logo_color"
-        app:menu="@menu/activity_main_drawer" />
+        app:itemIconTint="@color/colorPrimary"
+        app:itemTextColor="@color/colorPrimary"
+        app:menu="@menu/activity_main_drawer"
+
+        />
 
 </android.support.v4.widget.DrawerLayout>
